Improvement of the function for the generation of a QR Code

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                     </div>
 
                     <div class="option-generate" id="text">
-                         <span class="box-click" ></span>
+                        <span class="box-click"></span>
                         <div class="icons-option-box">
                             <div class="icons">
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
@@ -206,7 +206,7 @@
                             </div>
                         </div>
                         <span class="option-name">Text</span>
-                       
+
                     </div>
                 </div>
 
@@ -232,7 +232,11 @@
                         <button class="btn-generate">Generate Qr Code</button>
                         <div class="output-code">
                             <div class="qr-code-generate"></div>
-                            <button class="btn-save-qr-code">Save the image</button>
+                            <a href="" class="btn-save-qr-code" target="_blank">Save the image</a>
+
+                        </div>
+                        <div class="message-error">
+                            <p>QR code generate error ! Please reply...</p>
                         </div>
 
                     </div>
