--- a/index.html
+++ b/index.html
@@ -14,6 +14,30 @@
 
 <body>
     <div class="container control-tab">
+        <div class="modal-camera-access-denied">
+            <div class="message">
+                <span class="head">
+                    Permission denied
+                </span>
+                <p>
+                    Impossible to read the QR code if you have not authorized access to the camera of your device!
+                    Please allow access to the camera to read your QR code.
+                </p>
+                <button class="close">CLOSE</button>
+            </div>
+        </div>
+        <div class="modal-result-scan">
+            <div class="message">
+                <span class="head">
+                   Scan result
+                </span>
+                <p class="result">
+                    Impossible to read the QR code if you have not authorized access to the camera of your device!
+                    Please allow access to the camera to read your QR code.
+                </p>
+                <button class="close-result">CLOSE</button>
+            </div>
+        </div>
         <main class="tab__item tab-active" id="home-tab-item">
             <div class="logo-app">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64">
@@ -244,10 +268,36 @@
 
             </article>
         </main>
+        <main class="tab__item tab-disabled" id="reader-tab-item">
+            <div class="camera-scan">
+                <div id="reader-qrcode">
+
+                </div>
+                <div class="camera-change">
+                    <svg width="24px" height="24px" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" data-name="Layer 1">
+                        <path d="M12.29,5.21l1.5,1.5a1,1,0,0,0,1.42,0,1,1,0,0,0,.13-1.21H19a1,1,0,0,0,0-2H15.34a1,1,0,0,0-.13-1.21,1,1,0,0,0-1.42,0l-1.5,1.5a1,1,0,0,0-.21.33,1,1,0,0,0,0,.76A1,1,0,0,0,12.29,5.21ZM22.92,9.12a1,1,0,0,0-.21-.33l-1.5-1.5a1,1,0,0,0-1.42,0,1,1,0,0,0-.13,1.21H16a1,1,0,0,0,0,2h3.66a1,1,0,0,0,.13,1.21,1,1,0,0,0,1.42,0l1.5-1.5a1,1,0,0,0,.21-.33A1,1,0,0,0,22.92,9.12ZM11,10a4,4,0,1,0,4,4A4,4,0,0,0,11,10Zm0,6a2,2,0,1,1,2-2A2,2,0,0,1,11,16Zm9-3a1,1,0,0,0-1,1v5a1,1,0,0,1-1,1H4a1,1,0,0,1-1-1V11a1,1,0,0,1,1-1H6a1,1,0,0,0,1-.69l.54-1.62A1,1,0,0,1,8.44,7H10a1,1,0,0,0,0-2H8.44A3,3,0,0,0,5.59,7.06L5.28,8H4a3,3,0,0,0-3,3v8a3,3,0,0,0,3,3H18a3,3,0,0,0,3-3V14A1,1,0,0,0,20,13Z" />
+                    </svg>
+                </div>
+                <div class="scan-control">
+                    <button class="scan-qrcode btn-action" id="scan">
+                        START SCANNING
+                    </button>
+                    <button class="galery-image btn-action">
+                        SCAN FROM IMAGE
+                    </button>
+                    <button class="back-btn btn-action" back-item-value="0" title="back to home page">
+                        EXIT
+                    </button>
+                </div>
+            </div>
+
+        </main>
     </div>
     <script src="./js/qrcode.min.js"></script>
+    <script src="./js/html5-qrcode.min.js" type="text/javascript"></script>
     <script src="./js/main.js"></script>
     <script src="./js/generate-qrcode.js"></script>
+    <script src="./js/reader-qrcode.js"></script>
 </body>
 
 </html>
