mise à jour style

--- a/index.html
+++ b/index.html
@@ -279,9 +279,7 @@
                     </svg>
                 </div>
                 <div class="scan-control">
-                    <button class="scan-qrcode btn-action" id="scan">
-                        START SCANNING
-                    </button>
+                    <button class="scan-qrcode btn-action" id="scan">START SCANNING</button>
                     <button class="galery-image btn-action">
                         SCAN FROM IMAGE
                     </button>
