--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="modal-result-scan">
             <div class="message">
                 <span class="head">
-                   Scan result
+                    Scan result
                 </span>
                 <p class="result">
                     Impossible to read the QR code if you have not authorized access to the camera of your device!
@@ -273,11 +273,13 @@
                 <div id="reader-qrcode">
 
                 </div>
+                <!--
                 <div class="camera-change">
                     <svg width="24px" height="24px" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" data-name="Layer 1">
                         <path d="M12.29,5.21l1.5,1.5a1,1,0,0,0,1.42,0,1,1,0,0,0,.13-1.21H19a1,1,0,0,0,0-2H15.34a1,1,0,0,0-.13-1.21,1,1,0,0,0-1.42,0l-1.5,1.5a1,1,0,0,0-.21.33,1,1,0,0,0,0,.76A1,1,0,0,0,12.29,5.21ZM22.92,9.12a1,1,0,0,0-.21-.33l-1.5-1.5a1,1,0,0,0-1.42,0,1,1,0,0,0-.13,1.21H16a1,1,0,0,0,0,2h3.66a1,1,0,0,0,.13,1.21,1,1,0,0,0,1.42,0l1.5-1.5a1,1,0,0,0,.21-.33A1,1,0,0,0,22.92,9.12ZM11,10a4,4,0,1,0,4,4A4,4,0,0,0,11,10Zm0,6a2,2,0,1,1,2-2A2,2,0,0,1,11,16Zm9-3a1,1,0,0,0-1,1v5a1,1,0,0,1-1,1H4a1,1,0,0,1-1-1V11a1,1,0,0,1,1-1H6a1,1,0,0,0,1-.69l.54-1.62A1,1,0,0,1,8.44,7H10a1,1,0,0,0,0-2H8.44A3,3,0,0,0,5.59,7.06L5.28,8H4a3,3,0,0,0-3,3v8a3,3,0,0,0,3,3H18a3,3,0,0,0,3-3V14A1,1,0,0,0,20,13Z" />
                     </svg>
                 </div>
+-->
                 <div class="scan-control">
                     <button class="scan-qrcode btn-action" id="scan">START SCANNING</button>
                     <button class="galery-image btn-action">
@@ -290,6 +292,28 @@
             </div>
 
         </main>
+        <main class="tab__item tab-disabled" id="about-tab-item">
+            <div class="header-tab">
+                <button class="back-btn" back-item-value="0" title="back to home page">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                        <path d="M5 8L1 12L5 16L5 13L23 13L23 11L5 11L5 8 z" fill="#FFFFFF" />
+                    </svg>
+                </button>
+                <span class="tab-title">ABOUT</span>
+            </div>
+            <div class="about-container content-tab">
+                <p>
+                    QR CODE READER-GENERATOR is a small open source web application under development that allows you to read and generate QR codes from your smartphone! This is a small project I coded for my 2022 challenge, which is to produce at least 40 applications with web languages.
+                    This application uses javascript and two main libraries, one for reading and the other for writing qr code.
+                    <br><br>
+                    Do not hesitate to visit my github repository to access the source codes of this application. Note that the application is not yet 100% complete, only the major functionalities that have been implemented, I still have to manage the responsives of the scan section on different screens and also provide the possibility of sharing the scan result, copying it or even doing an action with it.
+                    Please send me all your suggestions and comments.
+                </p>
+                <a href="https://github.com/Bope142/qr-code-reader-generator-web.git" target="_blank">GO TO GITHUB REPOSITORY</a>
+                <span>Copyright (c) 2022 Norbert Yemuang</span>
+            </div>
+        </main>
+        <input type="file" id="qr-input-file" accept="image/*" capture hidden>
     </div>
     <script src="./js/qrcode.min.js"></script>
     <script src="./js/html5-qrcode.min.js" type="text/javascript"></script>
